cabal-version:   2.4
name:            tahoe-bs
version:         0.6.0.0
synopsis:
  Types related to implementation of a Tahoe-LAFS Great Black Swamp server

description:
  Types used by the server provided by `tahoe-great-black-swamp` as
  well as any implementation of a storage backend for use by that
  server.

license:         Apache-2.0
license-file:    LICENSE
author:          Jean-Paul Calderone
maintainer:      exarkun@twistedmatrix.com
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: git@gitlab.com:tahoe-lafs/tahoe-great-black-swamp-types.git

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Tahoe.Storage.Backend
  build-depends:
    , aeson              >=1.4.7    && <2.2
    , base               >=4.14.3.0 && <4.20
    , base64-bytestring  >=1.0.0.3  && <1.3
    , bytestring         >=0.10.8.2 && <0.13
    , containers         ^>=0.6.0.1
    , hashable           >=1.3.5.0  && <1.5
    , http-types         ^>=0.12.3
    , memory             >=0.15     && <0.19
    , text               >=1.2.3.1  && <2.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedStrings
    PackageImports
    RecordWildCards
